tests/fixtures/invalid/min_bool_str.py
# Cannot call min() with Bool, Str
x = min(True, "hello")
